artichoke-backend/src/sys/ffi.rs

impl mrb_callinfo {
    #[inline]
    pub fn n(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 4u8) as u8) }
    }
    #[inline]
    pub fn set_n(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 4u8, val as u64)
        }
    }
    #[inline]
    pub fn nk(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(4usize, 4u8) as u8) }
    }
    #[inline]
    pub fn set_nk(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(4usize, 4u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(n: u8, nk: u8) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 4u8, {
            let n: u8 = unsafe { ::core::mem::transmute(n) };
            n as u64
        });
        __bindgen_bitfield_unit.set(4usize, 4u8, {
            let nk: u8 = unsafe { ::core::mem::transmute(nk) };
            nk as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum mrb_fiber_state {
    MRB_FIBER_CREATED = 0,
    MRB_FIBER_RUNNING = 1,
    MRB_FIBER_RESUMED = 2,
    MRB_FIBER_SUSPENDED = 3,
    MRB_FIBER_TRANSFERRED = 4,
    MRB_FIBER_TERMINATED = 5,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_context {
    pub prev: *mut mrb_context,
    pub stbase: *mut mrb_value,
    pub stend: *mut mrb_value,
    pub ci: *mut mrb_callinfo,
    pub cibase: *mut mrb_callinfo,
    pub ciend: *mut mrb_callinfo,
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
    pub fib: *mut RFiber,
}
#[test]
fn bindgen_test_layout_mrb_context() {
    const UNINIT: ::core::mem::MaybeUninit<mrb_context> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mrb_context>(),
        64usize,
        concat!("Size of: ", stringify!(mrb_context))
    );
    assert_eq!(
        ::core::mem::align_of::<mrb_context>(),
        8usize,
        concat!("Alignment of ", stringify!(mrb_context))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).prev) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(prev))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stbase) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(stbase))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stend) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(stend))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ci) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(ci))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cibase) as usize - ptr as usize },
        32usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(cibase))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ciend) as usize - ptr as usize },
        40usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(ciend))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fib) as usize - ptr as usize },
        56usize,
        concat!("Offset of field: ", stringify!(mrb_context), "::", stringify!(fib))
    );
}
impl mrb_context {
    #[inline]
    pub fn status(&self) -> mrb_fiber_state {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 4u8) as u32) }
    }
    #[inline]
    pub fn set_status(&mut self, val: mrb_fiber_state) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 4u8, val as u64)
        }
    }
    #[inline]
    pub fn vmexec(&self) -> mrb_bool {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(4usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_vmexec(&mut self, val: mrb_bool) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(4usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(status: mrb_fiber_state, vmexec: mrb_bool) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 4u8, {
            let status: u32 = unsafe { ::core::mem::transmute(status) };
            status as u64
        });
        __bindgen_bitfield_unit.set(4usize, 1u8, {
            let vmexec: u8 = unsafe { ::core::mem::transmute(vmexec) };
            vmexec as u64
        });
        __bindgen_bitfield_unit
    }
}
pub type mrb_func_t = ::core::option::Option<unsafe extern "C" fn(mrb: *mut mrb_state, self_: mrb_value) -> mrb_value>;
pub type mrb_method_t = usize;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_cache_entry {
    pub c: *mut RClass,
    pub c0: *mut RClass,
    pub mid: mrb_sym,
    pub m: mrb_method_t,
}
#[test]
fn bindgen_test_layout_mrb_cache_entry() {
    const UNINIT: ::core::mem::MaybeUninit<mrb_cache_entry> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mrb_cache_entry>(),
        32usize,
        concat!("Size of: ", stringify!(mrb_cache_entry))
    );
    assert_eq!(
        ::core::mem::align_of::<mrb_cache_entry>(),
        8usize,
        concat!("Alignment of ", stringify!(mrb_cache_entry))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).c) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(mrb_cache_entry), "::", stringify!(c))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).c0) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(mrb_cache_entry), "::", stringify!(c0))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).mid) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(mrb_cache_entry), "::", stringify!(mid))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).m) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(mrb_cache_entry), "::", stringify!(m))
    );
}
pub type mrb_atexit_func = ::core::option::Option<unsafe extern "C" fn(arg1: *mut mrb_state)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_state {
    pub jmp: *mut mrb_jmpbuf,
    pub allocf: mrb_allocf,
    pub allocf_ud: *mut ::core::ffi::c_void,
    pub c: *mut mrb_context,
    pub root_c: *mut mrb_context,
    pub globals: *mut iv_tbl,
    pub exc: *mut RObject,
    pub top_self: *mut RObject,
    pub object_class: *mut RClass,
    pub class_class: *mut RClass,
    pub module_class: *mut RClass,
    pub proc_class: *mut RClass,
    pub string_class: *mut RClass,
    pub array_class: *mut RClass,
    pub hash_class: *mut RClass,
    pub range_class: *mut RClass,
    pub float_class: *mut RClass,
    pub integer_class: *mut RClass,
    pub true_class: *mut RClass,
    pub false_class: *mut RClass,
    pub nil_class: *mut RClass,
    pub symbol_class: *mut RClass,
    pub kernel_module: *mut RClass,
    pub gc: mrb_gc,
    pub cache: [mrb_cache_entry; 256usize],
    pub symidx: mrb_sym,
    pub symtbl: *mut *const ::core::ffi::c_char,
    pub symlink: *mut u8,
    pub symflags: *mut u8,
    pub symhash: [mrb_sym; 256usize],
    pub symcapa: usize,
    pub symbuf: [::core::ffi::c_char; 8usize],
    pub eException_class: *mut RClass,
    pub eStandardError_class: *mut RClass,
    pub nomem_err: *mut RObject,
    pub stack_err: *mut RObject,
    pub ud: *mut ::core::ffi::c_void,
    pub atexit_stack: *mut mrb_atexit_func,
    pub atexit_stack_len: u16,
}
